replace margin/padding with width 98% to fix scrollbar bug for IE7 (RM-2635)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@16982 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/SingleView.css
+++ b/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/SingleView.css
@@ -83,22 +83,18 @@ div.singleView div.content
   height: 100%;
 }
 
+body.msie7 div.singleViewView div.content
+{
+  width: 98%;
+  height: 98%;
+}
+
 div.singleViewView
 {
   padding: 1px;
   vertical-align: top; 	
   margin: 0;
   overflow: hidden;
-}
-
-body.msie7 div.singleViewView div.content
-{
-  margin-left: -2px;
-}
-
-body.msie7 div.singleViewView div.content > div
-{
-  padding-left: 2px;
 }
 
 
